--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,9 @@
 name: template test
 
+on: workflow_dispatch
+
 jobs:
-  runs-on: ubuntu
+  runs-on: ubuntu-latest
   steps:
     - name: test
       run: |
