--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,9 +3,8 @@ name: template test
 on: workflow_dispatch
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: test
-      run: |
-        echo hello world
+  Print-Hello-World:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo hello world
         
