--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,3 +5,7 @@ on: [push,workflow_dispatch]
 jobs:
   Build:
     uses: earnestdl/templates/.github/workflows/build.yml@main
+    with: 
+      appType: bash
+      appVersion: 0
+      
