--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
     with: 
       deployTarget: openshift
       deployEnvironment: dev
-      deployRegions: [east,metro] 
+      deployRegions: [ "east", "metro"] 
     secrets:
       TOKEN_E1_DEV: ${{ secrets.TOKEN_E1_DEV }}
       TOKEN_E2_DEV: ${{ secrets.TOKEN_E2_DEV }}
@@ -24,8 +24,8 @@ jobs:
     with: 
       deployTarget: openshift
       deployEnvironment: qa
-      deployRegions: [east,metro] 
-    secrets:
+      deployRegions: [ "east", "metro"] 
+   secrets:
       TOKEN_E1_DEV: ${{ secrets.TOKEN_E1_QA }}
       TOKEN_E2_DEV: ${{ secrets.TOKEN_E2_QA }}
 
@@ -34,7 +34,7 @@ jobs:
     with: 
       deployTarget: openshift
       deployEnvironment: stress
-      deployRegions: [east,metro] 
+      deployRegions: [ "east", "metro"] 
     secrets:
       TOKEN_E1_DEV: ${{ secrets.TOKEN_E1_QA }}
       TOKEN_E2_DEV: ${{ secrets.TOKEN_E2_QA }}
@@ -44,7 +44,7 @@ jobs:
     with: 
       deployTarget: openshift
       deployEnvironment: prod
-      deployRegions: [east,metro] 
+      deployRegions: [ "east", "metro"] 
     secrets:
       TOKEN_E1_DEV: ${{ secrets.TOKEN_E1_PROD }}
       TOKEN_E2_DEV: ${{ secrets.TOKEN_E2_PROD }}
