--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,15 +1,15 @@
-name: template test
+name: Pipeline
 
 on: [push,workflow_dispatch]
 
 jobs:
-  Build:
+  BUILD:
     uses: earnestdl/templates/.github/workflows/build.yml@main
     with: 
       appType: bash
       appVersion: 0
       
-  Deploy-Dev:
+  DEV:
     uses: earnestdl/templates/.github/workflows/deploy.yml@main
     with: 
       deployTarget: openshift
@@ -19,32 +19,32 @@ jobs:
       TOKEN_E1: ${{ secrets.TOKEN_E1_DEV }}
       TOKEN_E2: ${{ secrets.TOKEN_E2_DEV }}
 
-#  Deploy-QA:
-#    uses: earnestdl/templates/.github/workflows/deploy.yml@main
-#    with: 
-#      deployTarget: openshift
-#      deployEnvironment: qa
-#      deployRegions: [ "east", "metro"] 
-#   secrets:
-#      TOKEN_E1_DEV: ${{ secrets.TOKEN_E1_QA }}
-#      TOKEN_E2_DEV: ${{ secrets.TOKEN_E2_QA }}
+  QA:
+    uses: earnestdl/templates/.github/workflows/deploy.yml@main
+    with: 
+      deployTarget: openshift
+      deployEnvironment: qa
+      deployRegions: "['east', 'metro']" 
+   secrets:
+      TOKEN_E1: ${{ secrets.TOKEN_E1_QA }}
+      TOKEN_E2: ${{ secrets.TOKEN_E2_QA }}
 
-#  Deploy-Stress:
-#    uses: earnestdl/templates/.github/workflows/deploy.yml@main
-#    with: 
-#      deployTarget: openshift
-#      deployEnvironment: stress
-#      deployRegions: [ "east", "metro"] 
-#    secrets:
-#      TOKEN_E1_DEV: ${{ secrets.TOKEN_E1_QA }}
-#      TOKEN_E2_DEV: ${{ secrets.TOKEN_E2_QA }}
+  STRESS:
+    uses: earnestdl/templates/.github/workflows/deploy.yml@main
+    with: 
+      deployTarget: openshift
+      deployEnvironment: stress
+      deployRegions: "['east', 'metro']" 
+    secrets:
+      TOKEN_E1: ${{ secrets.TOKEN_E1_QA }}
+      TOKEN_E2: ${{ secrets.TOKEN_E2_QA }}
 
-#  Deploy-Prod:
-#    uses: earnestdl/templates/.github/workflows/deploy.yml@main
-#    with: 
-#      deployTarget: openshift
-#      deployEnvironment: prod
-#      deployRegions: [ "east", "metro"] 
-#    secrets:
-#      TOKEN_E1_DEV: ${{ secrets.TOKEN_E1_PROD }}
-#      TOKEN_E2_DEV: ${{ secrets.TOKEN_E2_PROD }}
+  PROD:
+    uses: earnestdl/templates/.github/workflows/deploy.yml@main
+    with: 
+      deployTarget: openshift
+      deployEnvironment: prod
+      deployRegions: "['east', 'metro']" 
+    secrets:
+      TOKEN_E1: ${{ secrets.TOKEN_E1_PROD }}
+      TOKEN_E2: ${{ secrets.TOKEN_E2_PROD }}
